tests/baselines/reference/reachabilityChecks7.errors.txt
tests/cases/compiler/reachabilityChecks7.ts(3,16): error TS7030: Not all code paths return a value.
tests/cases/compiler/reachabilityChecks7.ts(6,9): error TS7030: Not all code paths return a value.


==== tests/cases/compiler/reachabilityChecks7.ts (2 errors) ====
    
    // async function without return type annotation - error
    async function f1() {    
                   ~~
!!! error TS7030: Not all code paths return a value.
    }
    
    let x = async function() {
            ~~~~~
!!! error TS7030: Not all code paths return a value.
    }
    
    // async function with which promised type is void - return can be omitted
    async function f2(): Promise<void> {
        
    }